Add Modifier feature

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </header>
 
   <main>
-    <!-- Form to add a product -->
+    <!-- Form to add or edit a product -->
     <section id="add-product">
       <h2>Ajouter un produit</h2>
       <form id="product-form">
